# Triton-blog-file

./: README.md  format-dump.py  generate_all_diffs.py  pyproject.toml
matmul/kernel/: matmul-with-block.py  matmul-with-dot-bf16.py  matmul-with-dot-v1.py  matmul-with-dot-v2.py  matmul-with-tma-v1.py  matmul-with-tma-v2.py
matmul/native/: matmul.py
matmul/native/.cache/: matrix_multiplication_kernel.llir  matrix_multiplication_kernel.source  matrix_multiplication_kernel.ttgir  matrix_multiplication_kernel.ttir
matmul/native/MLIR/: 01-source.mlir  02-Inliner.mlir  03-Canonicalizer.mlir  04-Canonicalizer.mlir  05-Canonicalizer.mlir  06-TritonRewriteTensorPointer.mlir  07-Canonicalizer.mlir  08-TritonCombineOps.mlir  09-TritonReorderBroadcast.mlir  10-CSE.mlir  11-SymbolDCE.mlir  12-TritonLoopUnroll.mlir  13-ConvertTritonToTritonGPU.mlir  14-TritonGPUCoalesce.mlir  15-TritonGPUF32DotTC.mlir  16-TritonGPUPlanCTAPass.mlir  17-TritonGPURemoveLayoutConversions-debug.mlir  17-TritonGPURemoveLayoutConversions.mlir  18-TritonGPUOptimizeThreadLocality.mlir  19-TritonGPUAccelerateMatmul.mlir  20-TritonGPURemoveLayoutConversions.mlir  21-TritonGPUOptimizeDotOperands.mlir  22-Canonicalizer.mlir  23-TritonNvidiaGPUOptimizeDescriptorEncodingPass.mlir  24-TritonLoopAwareCSE.mlir  25-TritonGPUFuseNestedLoops.mlir  26-Canonicalizer.mlir  27-TritonLoopInvariantCodeMotion.mlir  28-TritonGPUOptimizeAccumulatorInit.mlir  29-TritonGPUHoistTMEMAlloc.mlir  30-TritonNvidiaGPUPromoteLHSToTMemPass.mlir  31-TritonGPUAssignLatencies.mlir  37-SCCP.mlir  (+49 more)
matmul/with_dot_v2/: matmul-with-dot-v2.py
(+264 files in other folders)
